# rusty-newsletter

./: COPYRIGHT.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.yaml  sqlx-data.json
.github/workflows/: audit-dependencies-cron.yml  audit-dependencies-on-push.yml  audit-dependencies.yml  rust-ci.yml
configuration/: base.yaml  production.yaml
migrations/: 20221229233859_create_subscriptions_table.sql  20230206235314_make_status_not_null_in_subscriptions.sql  20230206235515_create_subscription_tokens_table.sql  20230213161124_create_users_table.sql  20230213161225_seed_user.sql  20230213170412_relax_null_checks_on_idempotency.sql  20230213170424_create_newsletter_issues_table.sql  20230213170435_create_issue_delivery_quque_table.sql
src/: config.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
