[package]
name = "rusty-newsletter"
version = "0.1.0"
edition = "2021"
authors = ["Janusz Piechówka"]
repository = "https://github.com/jpiechowka/rusty-newsletter"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rusty-newsletter"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", default-features = false, features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
] }
config = "0.13.3"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.2"
serde-aux = "4.1.2"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
rand = "0.8.5"
reqwest = "0.11.13"


[dev-dependencies]
claims = "0.7.1"
fake = "2.5.0"
once_cell = "1.17.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
test-case = "2.2.2"
